# Brief_4_Chicago_Regular_Girls

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
dags/: chicago_crimes_dag.py  ingestion.py
include/etl/: ingestion.py
include/soda/: checks_clean.yml  checks_raw.yml  configuration.yml.example
include/sql/: init_db.sql  transform.sql
