[project]
name = "brief-4-chicago-regular-girls"
version = "0.1.0"
description = "Pipeline Airflow pour les crimes de Chicago avec Soda et Postgres sur Render"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow-providers-postgres",
    "apache-airflow-providers-openlineage>=1.8.0",
    "pandas",
    "sqlalchemy",
    "psycopg2-binary",
    "asyncpg",          # Garde-le, c'est pour la paix sociale avec Airflow 2.10
    "soda-core-postgres"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"